# hn-test

./: .dockerignore  .gitignore  CLAUDE.md  COG_BUILD_UPDATE.md  DEPLOYMENT_README.md  Dockerfile  TODO.txt  cleanup_docker.sh  cog.yaml  evaluate_inference.py  predict.py  pyproject.toml  requirements.txt  train_and_deploy.sh
reports/: good.txt  summary.md  x.txt
scripts/: convert_jsonl_to_csv.py
src/: embeddings.py  feature_stats.py  features.py  main.py  train.py  train_models.py  train_text_only.py  train_transformer.py
src/models/: __init__.py  nn_head.py
