[project]
name = "hn-virality"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catboost>=1.2.8",
    "fastai>=2.8.5",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "tldextract>=5.3.0",
    "torch>=2.9.1",
    "transformers>=4.57.1",
]
